Port remaining code except music discs