@@ -11,14 +11,14 @@ import net.minecraft.data.DataProvider;
 import net.minecraft.data.PackOutput;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.sounds.SoundEvent;
+import net.minecraft.sounds.SoundEvents;
 import net.minecraft.sounds.SoundSource;
 import net.minecraft.world.entity.Entity;
 import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.level.Level;
 import net.minecraft.world.phys.Vec3;
-import net.neoforged.registries.ForgeRegistries;
-import net.neoforged.registries.RegisterEvent;
-import net.neoforged.registries.RegistryObject;
+import net.neoforged.neoforge.registries.DeferredHolder;
+import net.neoforged.neoforge.registries.RegisterEvent;
 
 import java.nio.file.Path;
 import java.util.ArrayList;
@@ -71,6 +71,12 @@ public class CCSoundEvents {
 
     public static SoundEntryProvider provider(DataGenerator generator) {
         return new SoundEntryProvider(generator);
+    }
+
+    public static void playItemPickup(Player player) {
+        player.level()
+                .playSound(null, player.blockPosition(), SoundEvents.ITEM_PICKUP, SoundSource.PLAYERS, .2f,
+                        1f + player.level().random.nextFloat());
     }
 
 //	@SubscribeEvent
@@ -177,7 +183,7 @@ public class CCSoundEvents {
         }
 
         public SoundEntryBuilder playExisting(Holder<SoundEvent> event) {
-            return playExisting(event::get, 1, 1);
+            return playExisting(event::value, 1, 1);
         }
 
         public SoundEntry build() {
@@ -209,6 +215,8 @@ public class CCSoundEvents {
         public abstract void register(RegisterEvent.RegisterHelper<SoundEvent> registry);
 
         public abstract void write(JsonObject json);
+
+        public abstract Holder<SoundEvent> getMainEventHolder();
 
         public abstract SoundEvent getMainEvent();
 
@@ -274,7 +282,7 @@ public class CCSoundEvents {
     private static class WrappedSoundEntry extends SoundEntry {
 
         private List<ConfiguredSoundEvent> wrappedEvents;
-        private List<WrappedSoundEntry.CompiledSoundEvent> compiledEvents;
+        private List<CompiledSoundEvent> compiledEvents;
 
         public WrappedSoundEntry(ResourceLocation id, String subtitle,
                                  List<ConfiguredSoundEvent> wrappedEvents, SoundSource category, int attenuationDistance) {
@@ -288,27 +296,31 @@ public class CCSoundEvents {
             for (int i = 0; i < wrappedEvents.size(); i++) {
                 ConfiguredSoundEvent wrapped = wrappedEvents.get(i);
                 ResourceLocation location = getIdOf(i);
-                RegistryObject<SoundEvent> event = RegistryObject.create(location, ForgeRegistries.SOUND_EVENTS);
-                compiledEvents.add(new WrappedSoundEntry.CompiledSoundEvent(event, wrapped.volume(), wrapped.pitch()));
+                DeferredHolder<SoundEvent, SoundEvent> event = DeferredHolder.create(Registries.SOUND_EVENT, location);
+                compiledEvents.add(new CompiledSoundEvent(event, wrapped.volume(), wrapped.pitch()));
             }
         }
 
         @Override
         public void register(RegisterEvent.RegisterHelper<SoundEvent> helper) {
-            for (WrappedSoundEntry.CompiledSoundEvent compiledEvent : compiledEvents) {
+            for (CompiledSoundEvent compiledEvent : compiledEvents) {
                 ResourceLocation location = compiledEvent.event().getId();
                 helper.register(location, SoundEvent.createVariableRangeEvent(location));
             }
         }
 
         @Override
+        public Holder<SoundEvent> getMainEventHolder() {
+            return compiledEvents.getFirst().event();
+        }
+
+        @Override
         public SoundEvent getMainEvent() {
-            return compiledEvents.get(0)
-                    .event().get();
+            return compiledEvents.getFirst().event().get();
         }
 
         protected ResourceLocation getIdOf(int i) {
-            return new ResourceLocation(id.getNamespace(), i == 0 ? id.getPath() : id.getPath() + "_compounded_" + i);
+            return ResourceLocation.fromNamespaceAndPath(id.getNamespace(), i == 0 ? id.getPath() : id.getPath() + "_compounded_" + i);
         }
 
         @Override
@@ -349,7 +361,7 @@ public class CCSoundEvents {
             }
         }
 
-        private record CompiledSoundEvent(RegistryObject<SoundEvent> event, float volume, float pitch) {
+        private record CompiledSoundEvent(DeferredHolder<SoundEvent, SoundEvent> event, float volume, float pitch) {
         }
 
     }
@@ -357,7 +369,7 @@ public class CCSoundEvents {
     private static class CustomSoundEntry extends SoundEntry {
 
         protected List<ResourceLocation> variants;
-        protected RegistryObject<SoundEvent> event;
+        protected DeferredHolder<SoundEvent, SoundEvent> event;
 
         public CustomSoundEntry(ResourceLocation id, List<ResourceLocation> variants, String subtitle,
                                 SoundSource category, int attenuationDistance) {
@@ -367,13 +379,18 @@ public class CCSoundEvents {
 
         @Override
         public void prepare() {
-            event = RegistryObject.create(id, ForgeRegistries.SOUND_EVENTS);
+            event = DeferredHolder.create(Registries.SOUND_EVENT, id);
         }
 
         @Override
         public void register(RegisterEvent.RegisterHelper<SoundEvent> helper) {
             ResourceLocation location = event.getId();
             helper.register(location, SoundEvent.createVariableRangeEvent(location));
+        }
+
+        @Override
+        public Holder<SoundEvent> getMainEventHolder() {
+            return event;
         }
 
         @Override
